tests/valid_seq/indirect_import_one_path_helper_2.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module indirect_import_one_path_helper_2.
:- interface.

:- type indirect_import_one_path_helper_2.foo == int.
